# os

./: .asm-lsp.toml  .gitignore  .gitmodules  CMakeLists.txt  TODO.md  limine.conf  run.sh  run_legacy.sh  rundebug.sh  toolchain.cmake
include/: panic.hpp  stdarg.h  stddef.h  utils.hpp
include/cpu/: GDT.hpp  asm.hpp  interrupts.hpp  spinlock.hpp
include/driver/: acpi.hpp  console.hpp  device.hpp  init.hpp  pci.hpp  pic.hpp  screen.hpp  uart.hpp  virtio_blk.hpp
include/driver/keyboard/: keyboard.hpp  keycode.hpp
include/limine/: limine_requests.hpp
include/list/: container_of.hpp  klist.hpp
include/memory/: physical_memory.hpp  virtual_memory.hpp
include/programs/: shell.hpp
src/: 8x8font.h  GDT.asm  GDT.cpp  GDT.hpp  acpi.cpp  asm.cpp  console.cpp  console.hpp  init.cpp  init.hpp  interrupts.asm  interrupts.cpp  interrupts.hpp  interupts.cpp  interupts.hpp  keyboard.cpp  keyboard.hpp  limine.h  limine_requests.cpp  limine_requests.hpp  main.cpp  panic.cpp  physical_memory.cpp  physical_memory.hpp  physicalmem.cpp  physicalmem.hpp  pic.cpp  pic.hpp  screen.cpp  screen.hpp  spinlock.cpp  utils.cpp  utils.hpp  virtual_memory.cpp  virtualmem.cpp  virtualmem.hpp
src/cpu/: GDT.cpp  asm.cpp  interrupts.asm  interrupts.cpp  spinlock.cpp
src/driver/: acpi.cpp  console.cpp  device.cpp  init.cpp  pci.cpp  pic.cpp  screen.cpp  uart.cpp  virtio_blk.cpp
src/driver/keyboard/: keyboard.cpp
src/limine/: limine_requests.cpp
src/list/: klist.cpp
src/memory/: physical_memory.cpp  virtual_memory.cpp
src/programs/: shell.cpp
